--- a/test/fixtures/relationships.yml
+++ b/test/fixtures/relationships.yml
@@ -1,13 +1,13 @@
 one:
   follower: michael
-  followed: lena
+  followed: lana
 
 two:
   follower: michael
   followed: malory
 
 three:
-  follower: lena
+  follower: lana
   followed: michael
 
 four:
