--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "vue-template-compiler": "^2.6.11"
   },
   "devDependencies": {
+    "prettier": "^2.0.4",
     "webpack-dev-server": "^3.10.3"
   }
 }
